--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,7 @@
 main {
   position: relative;
   width: 100%;
+  height: calc(100% - 100px);
   min-width: 1000px;
   margin: 50px auto;
 }
@@ -8,13 +9,15 @@ main {
 /* Main header */
 .main-header {
   position: relative;
-  top: 30px;
   z-index: 2;
 
   width: 50%;
+  height: calc(100% - 30px);
+  padding-top: 30px;
   font-family: 'Petit Formal Script';
   text-align: center;
   font-size: 50px;
+  background: #fff;
 }
 
 h2 > strong {
